--- a/cll2ev1-gdx/build.gradle
+++ b/cll2ev1-gdx/build.gradle
@@ -25,6 +25,7 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        lmlVersion = '1.7.1.9.3'
     }
 
     repositories {
@@ -38,12 +39,13 @@ allprojects {
 project(":desktop") {
     apply plugin: "java"
 
-
     dependencies {
         compile project(":core")
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
     }
+    
+     sourceSets.main.resources.srcDirs = [ project(":core").file("assets") ]
 }
 
 project(":android") {
@@ -82,9 +84,9 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "com.github.czyzby:gdx-lml:1.7.1.9.3"
+        compile "com.github.czyzby:gdx-lml:$lmlVersion"
         compile "com.kotcrab.vis:vis-ui:1.1.1"
-        compile "com.github.czyzby:gdx-lml-vis:1.7.1.9.3"
+        compile "com.github.czyzby:gdx-lml-vis:$lmlVersion"
     }
 }
 
@@ -98,16 +100,18 @@ project(":html") {
         compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
         compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
-        compile "com.github.czyzby:gdx-kiwi:1.7.1.9.3:sources"
-        compile "com.github.czyzby:gdx-lml:1.7.1.9.3:sources"
+        compile "com.github.czyzby:gdx-kiwi:$lmlVersion:sources"
+        compile "com.github.czyzby:gdx-lml:$lmlVersion:sources"
         compile "com.kotcrab.vis:vis-ui:1.1.1:sources"
-        compile "com.github.czyzby:gdx-kiwi:1.7.1.9.3:sources"
-        compile "com.github.czyzby:gdx-lml:1.7.1.9.3:sources"
-        compile "com.github.czyzby:gdx-lml-vis:1.7.1.9.3:sources"
+        compile "com.github.czyzby:gdx-kiwi:$lmlVersion:sources"
+        compile "com.github.czyzby:gdx-lml:$lmlVersion:sources"
+        compile "com.github.czyzby:gdx-lml-vis:$lmlVersion:sources"
         compile "com.kotcrab.vis:vis-ui:1.1.1:sources"
     }
 }
 
-tasks.eclipse.doLast {
-    delete ".project"
-}
+ tasks.eclipse.doLast {
+            delete ".project"
+            delete ".classpath"
+            delete ".settings/"
+        }
