--- a/cll2ev1-gdx/build.gradle
+++ b/cll2ev1-gdx/build.gradle
@@ -1,10 +1,9 @@
 buildscript {
     System.properties['com.android.build.gradle.overrideVersionCheck'] = 'true'
     repositories {
-        mavenLocal()
+    	jcenter()
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        jcenter()
     }
     dependencies {
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
@@ -25,13 +24,14 @@ allprojects {
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
+        sbVersion = 'v3.15.0'
     }
 
     repositories {
-        mavenLocal()
-        mavenCentral()
+    	jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -83,6 +83,12 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile ("com.github.peakgames.libgdx-stagebuilder:stagebuilder-core:$sbVersion") {
+        	exclude group: 'com.badlogicgames.gdx', module: 'gdx'
+        	exclude group: 'com.badlogicgames.gdx', module: 'gdx-platform'
+        	exclude group: 'com.badlogicgames.gdx', module: 'gdx-backend-android'
+        	exclude group: 'com.binarytweed', module: 'quarantining-test-runner'
+        }
     }
 }
 
