--- a/cll2ev1-gdx/build.gradle
+++ b/cll2ev1-gdx/build.gradle
@@ -79,7 +79,7 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile 'com.github.CherokeeLanguage:LeitnerCards:94138038f3'
+        compile 'com.github.CherokeeLanguage:LeitnerCards:-SNAPSHOT'
     }
 	configurations.all {
 	    resolutionStrategy.cacheChangingModulesFor 30, 'seconds'
