GameCards - load previous CardStats data and associate with correct cards before starting a session

--- a/cll2ev1-gdx/build.gradle
+++ b/cll2ev1-gdx/build.gradle
@@ -79,11 +79,12 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile 'com.github.CherokeeLanguage:LeitnerCards:-SNAPSHOT'
+        compile 'com.github.CherokeeLanguage:LeitnerCards:80fb9a86f3'
     }
-	configurations.all {
+}
+
+configurations.all {
 	    resolutionStrategy.cacheChangingModulesFor 30, 'seconds'
-	}
 }
 
 
