--- a/cll2ev1-gdx/android/build.gradle
+++ b/cll2ev1-gdx/android/build.gradle
@@ -19,6 +19,24 @@ android {
         minSdkVersion 8
         targetSdkVersion 23
     }
+    signingConfigs {
+        release {
+        		if (new File(RELEASE_STORE_FILEA).isDirectory()) {
+        			storeFile file(RELEASE_STORE_FILEA)
+        		} else {
+        			storeFile file(RELEASE_STORE_FILEB)
+        		}
+            
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 
