--- a/cll2ev1-gdx/desktop/build.gradle
+++ b/cll2ev1-gdx/desktop/build.gradle
@@ -15,11 +15,12 @@ task run(dependsOn: classes, type: JavaExec) {
 }
 
 task dist(type: Jar) {
+	baseName = "CLL2EV1"
     from files(sourceSets.main.output.classesDir)
     from files(sourceSets.main.output.resourcesDir)
     from {configurations.compile.collect {zipTree(it)}}
     from files(project.assetsDir);
- 
+ 	
     manifest {
         attributes 'Main-Class': project.mainClassName
     }
