--- a/cll2ev1-gdx/build.gradle
+++ b/cll2ev1-gdx/build.gradle
@@ -20,7 +20,7 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    version = '1.18'
+    version = VERSION
     ext {
         appName = "cll2ev1-gdx"
         gdxVersion = '1.9.4'
