--- a/cll2ev1-gdx/ios/robovm.properties
+++ b/cll2ev1-gdx/ios/robovm.properties
@@ -1,4 +1,4 @@
-app.version=1.18
+app.version==1.19
 app.id=com.cherokeelessons.cll2ev1
 app.mainclass=com.cherokeelessons.cll2ev1.IOSLauncher
 app.executable=IOSLauncher
