--- a/cll1-gdx/build.gradle
+++ b/cll1-gdx/build.gradle
@@ -8,7 +8,8 @@ buildscript {
     dependencies {
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
         classpath 'com.android.tools.build:gradle:2.2.0-beta1'
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.2.2'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
     }
 }
 
@@ -17,14 +18,15 @@ task files_txt(type: Exec) {
 }
 
 allprojects {
+	apply plugin: 'com.github.ben-manes.versions'
     apply plugin: "eclipse"
     apply plugin: "idea"
 
     version = VERSION
     ext {
         appName = "cll1-gdx"
-        gdxVersion = '1.9.4'
-        roboVMVersion = '2.2.0'
+        gdxVersion = '1.9.6'
+        roboVMVersion = '2.3.0'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
