app name fix + version bump

--- a/cll1-gdx/ios/robovm.properties
+++ b/cll1-gdx/ios/robovm.properties
@@ -1,6 +1,6 @@
-app.version==1.65
+app.version==1.66
 app.id=com.cherokeelessons.cll2ev1
 app.mainclass=com.cherokeelessons.cll2ev1.IOSLauncher
 app.executable=IOSLauncher
 app.build=1
-app.name=cll2ev1-gdx
+app.name=cll1
