--- a/cll1-gdx/desktop/build.gradle
+++ b/cll1-gdx/desktop/build.gradle
@@ -3,7 +3,7 @@ apply plugin: "java"
 sourceCompatibility = 1.6
 sourceSets.main.java.srcDirs = [ "src/" ]
 
-project.ext.mainClassName = "com.cherokeelessons.cll2ev1.desktop.DesktopLauncher"
+project.ext.mainClassName = "com.cherokeelessons.cll1.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../android/assets");
 
 task run(dependsOn: classes, type: JavaExec) {
@@ -15,7 +15,7 @@ task run(dependsOn: classes, type: JavaExec) {
 }
 
 task dist(type: Jar) {
-	baseName = "CLL2EV1"
+	baseName = "CLL1"
     from files(sourceSets.main.output.classesDir)
     from files(sourceSets.main.output.resourcesDir)
     from {configurations.compile.collect {zipTree(it)}}
