--- a/cll1-gdx/ios/build.gradle
+++ b/cll1-gdx/ios/build.gradle
@@ -4,7 +4,7 @@ sourceCompatibility = '1.7'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 ext {
-	mainClassName = "com.cherokeelessons.cll2ev1.IOSLauncher"
+	mainClassName = "com.cherokeelessons.cll1.IOSLauncher"
 }
 
 launchIPhoneSimulator.dependsOn build
