--- a/cll1-gdx/html/build.gradle
+++ b/cll1-gdx/html/build.gradle
@@ -67,4 +67,5 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 
 eclipse.project {
     name = appName + "-html"
+    linkedResource name: 'assets', type: '2', location: 'PARENT-1-PROJECT_LOC/android/assets'
 }
