update to latest libGDX and MobiVM

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx4096m
 org.gradle.configureondemand=true
 VERSION=1.73
+VERSION_CODE=173
+VERSION_NAME="1.73"
