--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 buildscript {
-    System.properties['com.android.build.gradle.overrideVersionCheck'] = 'true'
     repositories {
-    	jcenter()
+        mavenLocal()
         mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        jcenter()
+        google()
     }
     dependencies {
-        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
-        classpath 'com.android.tools.build:gradle:2.2.0-beta1'
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.0'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.14.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.9-SNAPSHOT'
     }
 }
 
@@ -18,22 +18,29 @@ task files_txt(type: Exec) {
 }
 
 allprojects {
-	apply plugin: 'com.github.ben-manes.versions'
-    apply plugin: "eclipse"
-    apply plugin: "idea"
+	version = VERSION_NAME
 
-    version = VERSION
+	//apply plugin: 'com.github.ben-manes.versions'
+    apply plugin: "eclipse"
+    eclipse {
+	    classpath {
+	       downloadSources=true
+	    }
+	}
     ext {
         appName = "cll1-gdx"
-        gdxVersion = '1.9.6'
-        roboVMVersion = '2.3.0'
+        gdxVersion = '1.9.10'
+        roboVMVersion = '2.3.9-SNAPSHOT'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
     }
 
     repositories {
-    	jcenter()
+        //mavenLocal()
+        mavenCentral()
+        jcenter()
+        google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         maven { url "https://jitpack.io" }
@@ -41,23 +48,25 @@ allprojects {
 }
 
 project(":desktop") {
-    apply plugin: "java"
-
+    apply plugin: "java-library"
+    sourceCompatibility = 1.7
+	archivesBaseName = 'CLL1'
+	
     dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+		implementation project(":core")
+        api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
     }
 }
 
 project(":android") {
     apply plugin: "android"
-
+	sourceCompatibility = 1.7
     configurations { natives }
 
     dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
+        implementation project(":core")
+        api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
@@ -69,6 +78,9 @@ project(":android") {
 project(":ios") {
     apply plugin: "java"
     apply plugin: "robovm"
+    apply plugin: "eclipse-wtp"
+    
+    sourceCompatibility = 1.7
 
     dependencies {
         compile project(":core")
@@ -77,11 +89,18 @@ project(":ios") {
         compile "com.badlogicgames.gdx:gdx-backend-robovm:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-ios"
     }
+    
+    robovm {
+		iosSignIdentity = "Apple Distribution: Michael Joyner (43974U4CP4)"
+		iosSkipSigning = false;
+		archs = "thumbv7:arm64"
+	}
 }
 
 project(":core") {
     apply plugin: "java"
-
+    apply plugin: "eclipse-wtp"
+	sourceCompatibility = 1.7
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile 'com.github.CherokeeLanguage:LeitnerCards:20161025'
@@ -89,27 +108,3 @@ project(":core") {
 
     compileJava.dependsOn files_txt
 }
-
-configurations.all {
-	    resolutionStrategy.cacheChangingModulesFor 30, 'seconds'
-}
-
-
-project(":html") {
-    apply plugin: "gwt"
-    apply plugin: "war"
-
-
-    dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx:$gdxVersion:sources"
-        compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
-    }
-}
-
- tasks.eclipse.doLast {
-            //delete ".project"
-            //delete ".classpath"
-            //delete ".settings/"
-        }
