--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xms128m -Xmx4096m
 org.gradle.configureondemand=true
-VERSION=1.73
-VERSION_CODE=173
-VERSION_NAME="1.73"
+VERSION=1.75
+VERSION_CODE=175
+VERSION_NAME=1.75
