--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.9-SNAPSHOT'
+        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.9'
     }
 }
 
@@ -30,7 +30,7 @@ allprojects {
     ext {
         appName = "cll1-gdx"
         gdxVersion = '1.9.10'
-        roboVMVersion = '2.3.9-SNAPSHOT'
+        roboVMVersion = '2.3.9'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.0'
         aiVersion = '1.8.0'
